# Ymind

./: .gitignore  .gitmodules  LICENSE.md  README.md
.obsidian/: app.json  workspace.json
.trash/: Glossary.md  Parallel.md  Serial.md  window_env_setting.md  测速条件.md
Develop/Handware/: ubuntu_env_setting.md
Develop/Handware/Boards/ST/F1/cmake/: CMakeLists.txt  cmake.ioc
Develop/Handware/Design/: Design.md
Develop/Handware/Ubuntu/: .ubuntu_profile
Develop/Handware/Windows/: .wslconfig  wsl.conf  wsl.md
Develop/Language/: Regular.md  bash.md  graphviz.md
Develop/Language/C_C++/: C++.md  C++_Features.md  C.md  error.md  question.md
Develop/Language/linux-cmd-set/: info.md
Develop/Language/niuke/: history.md
Develop/Language/python/: python.md
Develop/Language/web/: html.md
Develop/OSystem/Kernel/: debug_tools.md
Develop/Protocols/libwebsockets/: readme.md
Develop/Sofeware/Harmony/: Harmony.md
Develop/Sofeware/VScode/: html.md
Develop/Sofeware/kernel_debug/: debug_tools.md  modules.md  uboot_env.md
Develop/Sofeware/linux_tools/: git.md
Develop/Sofeware/windows_tools/: WizTree.md
Hard_Project/STM32F103C6/: flash.dot  flash.md
Hard_Project/STM32F103C6/rcc/: rcc.md
Markdown/: ASCII.md  C++.md  C.md  Other.md  Qt.md  STM32_SDK.md  c11_std.md  git.md  ubuntu18.md  ubuntu使用记录.md  virtio.md  window环境使用.md  yocto.md  编程规范.md  网络编程.md
Markdown/C/: C++.md  C.md
Markdown/Other/: STM32_SDK.md
Markdown/Ubuntu/: bitbake.md  ubuntu使用记录.md  yocto.md
Markdown/Windows/: msys2.md  window环境使用.md
Markdown/six_Sigma/: six_sigma.md
Study/Computer/Language/: code_rule.md
Study/Computer/Other/: VCS.md
Study/English/: abbreviations.md  english.md
Study/English/Goole_Doodle/: CambodiaIndependenceDay.html
all_borad/nxp/imx8/: imx8_m4.md
develop/: hex.md
develop/Algorithm/: base64.md
develop/Environment/Ubuntu/: install.md  issue.md  manual.md  tip.md  ubuntu_env_setting.md
develop/Environment/Windows/: issue.md  manual.md
develop/Handware/Design/: Design.md
develop/Handware/Ubuntu/: ubuntu_env_setting.md
develop/Handware/Windows/: window_env_setting.md  wsl.conf  wsl.md
develop/Hardware/Sensor/: 旋转编码器EC11.xmind
develop/Language/: Regular.md  graphviz.md
develop/Language/C_C++/: C++.md  C++_Features.md  C.md  (+4 more)
develop/Protocols/: ModBus.md  spi.md
develop/Sofeware/: Glossary.md
develop/ToolsChain/: WizTree.md  fuser.md  i2ctransfer.md  lsmod.md  lsof.md
develop/abbreviations/: BLC.md  SLR.md  abbreviations.md  单反.md
project/STM32_cmake_DEMO/: Makefile
stagingArea/: CRC.md  NV12.md  PWM-BEEPER.md  Producer-Consumer Model.md  UART.md  iio.md  onnxruntime.md  全画幅.md  新用户创建流程.md
stagingArea/Audio/: 音频播放流程.md
stagingArea/CSI/: CSI.md
stagingArea/DeviceTree/: device-tree-guide-zh.md  device-tree-guide.md
stagingArea/MIPI/: MIPI.md
stagingArea/ModBus/: MIPI.xmind  ModBus.md  ModBus串行链接.md  Modbus分布式选举.xmind
stagingArea/PortingUDMABUF/: udmabuf.md
stagingArea/TFTPSvr/: TFTPSvr.md
stagingArea/V4L2/: DQBUF、QBUF.md  enum vb2_buffer_state.md  struct vb2_buffer.md
stagingArea/driver-model/: Linux驱动模型.md  driver-model.md
stagingArea/onnxruntime/: build.md
stagingArea/project/: 电机控制.md
stagingArea/uboot中的文件操作/: uboot中的文件操作.md
stagingArea/齐次坐标系/: 齐次坐标系.md
study/language/: tip.md
time_stream/all_project/: Qt.md
time_stream/all_sdk_config/: Qt.md
time_stream/code/: A-tour-of-C++.md  c_priority.md
time_stream/linux_tools/: elf.md  git.md  yocto.md
time_stream/other/: english.md
time_stream/ubuntu_env/: bash.md  ubuntu_env_setting.md
time_stream/windows_env/: window_env_setting.md
(+379 files in other folders)
